added Docs page with Markdown

--- a/src/404.md
+++ b/src/404.md
@@ -1,7 +1,7 @@
 ---
 title: Page Not Found
 date: 2016-10-25
-layout: markdown-layout.html
+layout: markdown.html
 ---
 
 This page was not found.  If you are having trouble, please [contact us](/contact).
